# mind-notion

./: .dockerignore  .gitignore  .openapi-generator-ignore  AI_AGENT_PRODUCTION_REVIEW.md  CUSTOM_TEMPLATES_GUIDE.md  Dockerfile  HTTPONLY_COOKIES_IMPLEMENTATION.md  Makefile  Procfile  README.md  TASK.md  build.sh  docker-compose.yml  go.mod  go.sum  heroku.yml  package.json  pnpm-lock.yaml
ai-services/: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  smoke_test.py
ai-services/agent/: __init__.py  api.py  api_contracts.py  api_runtime.py  contracts.py  execute_tool.py  run.py  runtime_context.py
ai-services/agent-py/: .gitignore  =1.63.0  README.md  main.py  requirements.txt  smoke_test.py
ai-services/agent-py/agent/: __init__.py  run.py  server.py
ai-services/agent-py/agent/context/: __init__.py  compaction.py  token_estimator.py
ai-services/agent-py/agent/system/: filter_messages.py  prompt.py
ai-services/agent-py/agent/tools/: file.py  time.py
ai-services/agent/context/: model_limits.py
ai-services/agent/system/: __init__.py
ai-services/agent/tools/: __init__.py  code_execution.py  notes.py  rag.py  shell.py  web_search.py
ai-services/rag/: __init__.py  api.py  chunking.py  main.py  requirements.txt
ai-services/scripts/: smoke_test.py
ai-services/src/ai_services/: __init__.py  app.py  main.py
ai-services/src/ai_services/agent/: api_contracts.py  api_runtime.py  command_registry.py  run.py  run_inline_edit.py  (+1 more)
ai-services/tests/: conftest.py  test_agent_response_contracts.py
(+992 files in other folders)
